Logout Button - Server

--- a/Server_Manager/views/files.ejs
+++ b/Server_Manager/views/files.ejs
@@ -7,7 +7,7 @@
                 <li><a href="/users/?folder=<%= bread.slice(0,c++).join('/') %>"><%= d %></a></li>
             <% }) %>
     </ol>
-    <button class="btn btn-default pull-right topologyButton">Topology</button> 
+    <button class="btn btn-default pull-right topologyButton">Topology</button> <br>
 </div>
 
 <% if (data["folder"] != undefined) { %>
