--- a/Server_Manager/views/index.ejs
+++ b/Server_Manager/views/index.ejs
@@ -22,6 +22,12 @@
         <div class="row" style="background: rgb(238, 238, 238); margin-bottom: 10px;">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 topBar no-pad text-left animated slideInDown">
                     <%= title %>
+
+                    <% if (loggedin) { %>
+                    <form class="pull-right" action="/logout">
+                        <button name="action" class="btn btn-default">Logout</button>
+                    </form>
+                    <% } %>
             </div>
             
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 outputContainer animated zoomIn">
