Suggestion Link Added

--- a/Server_Manager/views/index.ejs
+++ b/Server_Manager/views/index.ejs
@@ -89,6 +89,14 @@
             </div>
         </div>
         <% } %>
+
+        <div class="row">
+            <div class="col-xs-12 text-center">
+                &copy; <a href="www.itshimanshu.me">Himanshu Kumar</a><br>
+                Have any feedback /suggestions? <br>
+                Please mail me @ <a href="mailto: himanshu.kumar133@gmail.com">himanshu.kumar133@gmail.com</a>
+            </div>
+        </div>
         
   </body>
 </html>
