--- a/Server_Manager/views/index.ejs
+++ b/Server_Manager/views/index.ejs
@@ -93,7 +93,7 @@
         <div class="row">
             <div class="col-xs-12 text-center">
                 &copy; <a href="//www.itshimanshu.me">Himanshu Kumar</a><br>
-                Have any feedback /suggestions? <br>
+                Have any feedback /suggestions? Please note that this service is still in alpha phase. So I would love the feedbacks.<br>
                 Please mail me @ <a href="mailto: himanshu.kumar133@gmail.com">himanshu.kumar133@gmail.com</a>
             </div>
         </div>
