--- a/Server_Manager/views/index.ejs
+++ b/Server_Manager/views/index.ejs
@@ -50,8 +50,8 @@
                         <div class="col-lg-4 col-md-6 col-xs-12 text-center">
                             <form action="" method="post" enctype="multipart/form-data">
                                 <h3>Login</h3>
-                                <input type="text" class="form-control" name="uname" placeholder="Username" aria-describedby="basic-addon1"><br>
-                                <input type="password" class="form-control" name="pass" placeholder="Password" aria-describedby="basic-addon1"><br>
+                                <input type="text" class="form-control" name="uname" placeholder="Username (Default is admin)" aria-describedby="basic-addon1"><br>
+                                <input type="password" class="form-control" name="pass" placeholder="Password (Default is admin)" aria-describedby="basic-addon1"><br>
                                 <input type="submit" class="btn btn-default" value="Login"><br>
                             </form>
                         </div>
